--- a/views/css/estilos.css
+++ b/views/css/estilos.css
@@ -205,8 +205,13 @@ img {
 }
 
 .hero-internas {
-  height: 300px;
+   height: 300px;
   background-size: cover;
+}
+
+.container-interna {
+  max-width: 1110px;
+  margin: 0 auto;;
 }
 
 /* menu */
